webcert/src/main/webapp/css/inera-webcert.css
/* ... */
body.start {
	background-color: #28b4c4;
}

body.start > .container-fluid {
}

.content-container {
	background-color: #fff;
	 -ms-box-shadow: 0 -5px 25px #323232;
  -webkit-box-shadow: 0 -5px 25px #323232;
  -moz-box-shadow: 0 -5px 25px #323232;
  box-shadow: 0 -5px 25px #323232;
  padding: 50px 100px; 
}

.content-footer {
	padding-top: 20px;
}

.content-footer, .content-footer a {
	color: #fff;
	margin: 0 auto;
  width: 70%;
  max-width: 700px;
}

.content-footer a {
	text-decoration: underline;
}

body.start h1, .content-container p {
	color: #28b4c4;
}

.container-fluid {
	/*overflow:hidden;*/ 
	padding: 0;
}

p {
	margin: 0;
	padding: 0 0 10px;
}

a {
	color: #28b4c4;
}

.header a {
  color: #28b4c4; font-size: 13px; line-height: 14px;
}

a.backlink {
  display:inline-block;
  line-height:18px;
  padding-left:15px;
  background:transparent url(/img/back-link-icon.gif) center left no-repeat;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
  padding-bottom: 10px;
}

h1 {
	font-size: 24px;
	color: #008391;
}

h1.backlink-heading {
  display: inline-block;
  margin-right: 20px;
  line-height: 29px;
}

h2 {
	font-size: 16px;
	line-height: 20px;
	padding-top: 30px;
}

h2.less-top-padding { /* useful if h2 is placed immediately after h1 */ 
	padding-top: 0;
}

.col-head{
  font-size: 20px;
  color: #008391;
  padding-bottom: 10px;
}

.col-head-about {
	padding-top: 0;
}

.about-content {
	max-width: 600px;
}

h3 {
	font-size: 16px;
	font-weight: bold;
	line-height: 20px;
}

h5.inline-heading {
    padding: 20px 0 5px 0;
}

.headerbox {
	padding: 0 0 0 0;
}
span.headerbox-logo { padding: 3px 20px 0 30px;  border-right: 1px solid #595c66; display: block; margin-top: 10px;}
span.headerbox-date { padding: 10px 0 0 30px; line-height: 17px; display: block;}
div.headerbox-user { font-size: 13px; line-height: 16px; padding: 10px 30px 0 0; }
div.headerbox-avatar {
  padding-right: 30px;
  background: url("../img/avatar.png") no-repeat 100% 50%;
  height: 34px;
}
div.headerbox-user-profile { padding-right: 44px; font-size: 13px; line-height: 18px; text-align: left; }
.header span.location { font-size: 14px; font-weight: bold;}
.header .otherLocations { font-size: 12px; }
.logout-button {
	float: right;
	margin: 4px 30px 0 0;
}

.settings {
  /*padding: 28px 0 0 28px;*/
  display: block;
  width: 40px;
  height: 34px; 
  background-image: url(../img/settings_ikon.png); 
  background-repeat: no-repeat;
  background-position: 50% 50%;
}

.settings:hover {
  background-image: url(../img/settings_hoover.png); 
}

/* bootstrap override */

.control-label {
	font-weight: bold;
}

.control-group {
  margin: 0;
  padding: 0 0 10px 0;
}

.buttonbar .btn { margin: 5px 5px 0 0; }

.btn {
	line-height: 18px;
}

.btn-secondary {
	 padding: 7px 15px;
	 background: none;
	 background-color: #f0f0f0;
}

.btn-secondary:hover {
  background-color: #f6f6f6;
}

.btn-success {
/*	border: none;*/
	padding: 7px 15px;
	font-weight: bold;
	background: none;
	background-color: #42a341;
	cursor: pointer;
	white-space:nowrap;
}

.btn-info,.btn-info[disabled]  {
  font-weight: bold;
  background: none;
  background-color: #28b4c4;
}

.qa-table .btn-info, .buttonbar .btn-info, .qa-panel .btn-info, .modal-footer .btn-info {
  padding: 7px 15px;
}

.table-links .btn-link { text-align: left; }

.certblock-copy .btn-info {
  padding: 7px 0;
}

.btn-info:hover {
  background-color: #38c4d4;
}

.btn-info[disabled]:hover {
  cursor: auto;
	background-color: #28b4c4;
/*  opacity: .5; /* Standards Compliant Browsers */
  /*filter: alpha(opacity=50);*/ /* IE 7 and Earlier */
/*  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);*/
} 

.btn-link {
	color: #008391;
}

.btn-link:hover {
	color: #31b2be;
}

.btn-link-link {
    border: 0;
    margin: 0;
    padding: 0;
}

button.btn-link-minimal {
	padding: 0;
}

.btn-inverse {
	background: none;
	background-color: #3f3f3f;
}

.buttonbar .btn-inverse {
  padding: 7px 15px;
}

/*
.btn-block {
  padding-top: 10px;
  padding-bottom: 10px;
}
*/
.btn-inverse:hover {
	background-color: #656565;
}

.dropdown-menu {
	padding: 5px 5px;
  -webkit-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
  -ms-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
  -o-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-submenu:hover > a, .dropdown-submenu:focus > a {
  background: none;
  background-color: #28b4c4;
}

.dropdown-menu-center {
	left: -23%;
}

.dropdown-menu button.btn-success {
  padding: 2px 10px;
}

.table-qa input[type="radio"], .table-qa input[type="checkbox"],
.qa-panel input[type="radio"], .qa-panel input[type="checkbox"],
.qa-filter input[type="radio"], .qa-filter input[type="checkbox"]{
  margin: 0 0 0;
}

form { margin: 0; }

input[datepicker-popup] {
  width: 80px;
}

.navbar {
	margin: 0;
}

.navbar-inner {
    min-height: 0;
    padding: 0;
    padding-left: 30px;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    border: 0;
    border-top: 1px solid #999;
    border-bottom: 1px solid #d4d4d4;
}

.navbar .divider-vertical {
    margin: 0;
}

.nav-tabs.nav-stacked {
   /* outline: none;*/
}

.navbar .nav {
    margin: 0 0 0 0;
    white-space: nowrap;
}

.navbar .nav>li {
  border-right: 1px solid #ddd;
/*  display: inline-block; /* Uncomment to lock menu items to one row (during 800x600 demos buttons won't be accessible otherwise) 
  float: none;*/
  position: relative;
}

.navbar .nav>li:first-child {border-left: 1px solid #ddd;}

.navbar .nav>li>a {
    padding: 8px 20px 8px;
}

.nav-stacked > .active > a, .nav-stacked > .active > a:hover, .nav-stacked > .active > a:focus {
color: #ffffff;
text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
background-color: #008391;
}
/* ... */

